[gd_scene load_steps=5 format=3 uid="uid://dqb0i5d4pcac0"]

[ext_resource type="Texture2D" uid="uid://5f53y8rnvpij" path="res://ui/textures/title_bg.png" id="1_rn57d"]
[ext_resource type="PackedScene" uid="uid://b2qvtbc7t7vwn" path="res://main/team_list/team_list.tscn" id="2_4i6oc"]
[ext_resource type="Script" path="res://main/bracket/bracket.gd" id="2_fa1li"]
[ext_resource type="Texture2D" uid="uid://djgl24xbv21eq" path="res://ui/icons/icon_combat.png" id="4_3nsr2"]

[node name="Bracket" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_rn57d")
stretch_mode = 1
script = ExtResource("2_fa1li")

[node name="Left" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -286.0
offset_right = 356.0
offset_bottom = 286.0
grow_vertical = 2

[node name="Team1" parent="Left" instance=ExtResource("2_4i6oc")]
layout_mode = 2

[node name="Team2" parent="Left" instance=ExtResource("2_4i6oc")]
layout_mode = 2

[node name="Team3" parent="Left" instance=ExtResource("2_4i6oc")]
layout_mode = 2

[node name="Team4" parent="Left" instance=ExtResource("2_4i6oc")]
layout_mode = 2

[node name="Right" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -356.0
offset_top = -286.0
offset_bottom = 286.0
grow_horizontal = 0
grow_vertical = 2

[node name="Team5" parent="Right" instance=ExtResource("2_4i6oc")]
layout_mode = 2

[node name="Team6" parent="Right" instance=ExtResource("2_4i6oc")]
layout_mode = 2

[node name="Team7" parent="Right" instance=ExtResource("2_4i6oc")]
layout_mode = 2

[node name="Team8" parent="Right" instance=ExtResource("2_4i6oc")]
layout_mode = 2

[node name="Champ" parent="." instance=ExtResource("2_4i6oc")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -178.0
offset_right = 178.0
offset_bottom = 140.0
grow_horizontal = 2

[node name="Timer" type="Timer" parent="."]

[node name="Lines" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Team1" type="Line2D" parent="Lines"]
position = Vector2(256, 97)
points = PackedVector2Array(69, 61, 173, 127)

[node name="Team2" type="Line2D" parent="Lines"]
position = Vector2(256, 97)
points = PackedVector2Array(77, 199, 173, 127)

[node name="Team3" type="Line2D" parent="Lines"]
position = Vector2(258, 380)
points = PackedVector2Array(69, 61, 173, 127)

[node name="Team4" type="Line2D" parent="Lines"]
position = Vector2(260, 388)
points = PackedVector2Array(73, 193, 173, 127)

[node name="Team5" type="Line2D" parent="Lines"]
position = Vector2(685, 99)
points = PackedVector2Array(278, 49, 173, 127)

[node name="Team6" type="Line2D" parent="Lines"]
position = Vector2(690, 97)
points = PackedVector2Array(277, 199, 173, 127)

[node name="Team7" type="Line2D" parent="Lines"]
position = Vector2(676, 382)
points = PackedVector2Array(289, 55, 173, 127)

[node name="Team8" type="Line2D" parent="Lines"]
position = Vector2(679, 382)
points = PackedVector2Array(288, 197, 173, 127)

[node name="Team9" type="Line2D" parent="Lines"]
position = Vector2(473, 100)
points = PackedVector2Array(170, -2, 173, 127)

[node name="QF1" type="Line2D" parent="Lines"]
position = Vector2(432, 228)
points = PackedVector2Array(0, -1, 76, 139)

[node name="QF2" type="Line2D" parent="Lines"]
position = Vector2(432, 228)
points = PackedVector2Array(1, 280, 76, 139)

[node name="QF3" type="Line2D" parent="Lines"]
position = Vector2(703, 231)
points = PackedVector2Array(157, -4, 76, 139)

[node name="QF4" type="Line2D" parent="Lines"]
position = Vector2(701, 227)
points = PackedVector2Array(148, 279, 76, 139)

[node name="SF1" type="Line2D" parent="Lines"]
position = Vector2(411, 81)
points = PackedVector2Array(97, 288, 236, 287)

[node name="SF2" type="Line2D" parent="Lines"]
position = Vector2(614, 301)
points = PackedVector2Array(161, 67, 39, 67)

[node name="Final" type="Line2D" parent="Lines"]
position = Vector2(614, 301)
points = PackedVector2Array(32, 69, 31, -79)

[node name="QF1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 191.0
offset_right = 461.0
offset_bottom = 255.0
texture = ExtResource("4_3nsr2")

[node name="QF2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 402.0
offset_top = 479.0
offset_right = 466.0
offset_bottom = 543.0
texture = ExtResource("4_3nsr2")

[node name="QF3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 825.0
offset_top = 194.0
offset_right = 889.0
offset_bottom = 258.0
texture = ExtResource("4_3nsr2")

[node name="QF4" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 818.0
offset_top = 473.0
offset_right = 882.0
offset_bottom = 537.0
texture = ExtResource("4_3nsr2")

[node name="SF1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 478.0
offset_top = 334.0
offset_right = 542.0
offset_bottom = 398.0
texture = ExtResource("4_3nsr2")

[node name="SF2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 743.0
offset_top = 333.0
offset_right = 807.0
offset_bottom = 397.0
texture = ExtResource("4_3nsr2")

[node name="Final" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 617.0
offset_top = 333.0
offset_right = 681.0
offset_bottom = 397.0
texture = ExtResource("4_3nsr2")

[node name="Championship" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 616.0
offset_top = 195.0
offset_right = 680.0
offset_bottom = 259.0
texture = ExtResource("4_3nsr2")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
